--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -231,7 +231,41 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def ddpg(n_episodes=2000, max_t=700):\n",
+    "    scores_deque = deque(maxlen=100)\n",
+    "    scores = []\n",
+    "    max_score = -np.Inf\n",
+    "    for i_episode in range(1, n_episodes+1):\n",
+    "        state = env.reset()\n",
+    "        agent.reset()\n",
+    "        score = 0\n",
+    "        for t in range(max_t):\n",
+    "            action = agent.act(state)\n",
+    "            next_state, reward, done, _ = env.step(action)\n",
+    "            agent.step(state, action, reward, next_state, done)\n",
+    "            state = next_state\n",
+    "            score += reward\n",
+    "            if done:\n",
+    "                break \n",
+    "        scores_deque.append(score)\n",
+    "        scores.append(score)\n",
+    "        print('\\rEpisode {}\\tAverage Score: {:.2f}\\tScore: {:.2f}'.format(i_episode, np.mean(scores_deque), score), end=\"\")\n",
+    "        if i_episode % 100 == 0:\n",
+    "            torch.save(agent.actor_local.state_dict(), 'checkpoint_actor.pth')\n",
+    "            torch.save(agent.critic_local.state_dict(), 'checkpoint_critic.pth')\n",
+    "            print('\\rEpisode {}\\tAverage Score: {:.2f}'.format(i_episode, np.mean(scores_deque)))   \n",
+    "    return scores\n",
+    "\n",
+    "scores = ddpg()\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.plot(np.arange(1, len(scores)+1), scores)\n",
+    "plt.ylabel('Score')\n",
+    "plt.xlabel('Episode #')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -250,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
